# power-train-sw

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  pytest.ini
ros2/src/powertrain_msgs/: CMakeLists.txt  package.xml
ros2/src/powertrain_msgs/msg/: SafetyVerdict.msg  WheelState.msg  WheelStates.msg
ros2/src/powertrain_ros/: package.xml  setup.cfg  setup.py
ros2/src/powertrain_ros/config/: accumulate.rviz  l515.yaml  l515_terrain.yaml  l515_tilt.rviz  robot_viz.rviz  wheel_stop.yaml
ros2/src/powertrain_ros/launch/: autonomy.launch.py  control.launch.py  l515.launch.py  l515_viz.launch.py  robot_viz.launch.py  wp5_control.launch.py
ros2/src/powertrain_ros/powertrain_ros/: arm_console_bridge_node.py  arm_console_mirror.py  arm_interlock.py  autonomy_controller_node.py  bringup_node.py  calibration_job.py  chassis_node.py  chassis_safety.py  chassis_telemetry.py  chassis_telemetry_sender_node.py  command_authority_node.py  console_can_status.py  contract.py  detection_adapter.py  fake_wheels_node.py  imu_tilt_node.py  joint_state_bridge_node.py  l515_adapter.py  l515_cloud_node.py  l515_node.py  l515_source.py  lane_follower_node.py  lane_freshness.py  lead_follower_node.py  message_adapter.py  mission_node.py  obstacle_zones_node.py  odometry_node.py  ops_broker_core.py  ops_broker_node.py  ops_contract.py  pdist80b.py  pdist80b_monitor_node.py  preflight.py  remote_input.py  remote_input_gateway.py  section_supervisor_node.py  state_estimation.py  teleop_command_node.py  terrain_qualification.py  (+5 more)
ros2/src/powertrain_ros/test/: conftest.py  test_arm_interlock.py  (+55 more)
(+593 files in other folders)
